--- a/public/act1/the-open-door/index.html
+++ b/public/act1/the-open-door/index.html
@@ -31,26 +31,26 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
     <meta itemprop="wordCount" content="407">
     <title>The Open Door :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/the-open-door/index.xml" rel="alternate" type="application/rss+xml" title="The Open Door :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764489759" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764489759" defer></script>
-    <script src="/js/search-lunr.js?1764489759" defer></script>
-    <script src="/js/search.js?1764489759" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1765029771" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1765029771" defer></script>
+    <script src="/js/search-lunr.js?1765029771" defer></script>
+    <script src="/js/search.js?1765029771" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764489759";
+      window.relearn.index_js_url="/searchindex.en.js?1765029771";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764489759" defer></script>
+    <script src="/js/lunr/lunr.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1765029771" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764489759" rel="stylesheet">
-    <link href="/css/theme.css?1764489759" rel="stylesheet">
-    <link href="/css/format-html.css?1764489759" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765029771" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765029771" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1765029771" rel="stylesheet">
+    <link href="/css/theme.css?1765029771" rel="stylesheet">
+    <link href="/css/format-html.css?1765029771" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -165,8 +165,8 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 
 <h1 id="the-open-door">The Open Door</h1>
 
-<p><a href="#R-image-3562494ccaa0f77f76f2697a3de26c22" class="lightbox-link"><img alt="Lucas Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/goose-pixel.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3562494ccaa0f77f76f2697a3de26c22"><img alt="Lucas Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/goose-pixel.png"></a></p>
+<p><a href="#R-image-ff4ba1cc4ffe2bc3a692ad6da6b4452a" class="lightbox-link"><img alt="Lucas Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/goose-pixel.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ff4ba1cc4ffe2bc3a692ad6da6b4452a"><img alt="Lucas Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/goose-pixel.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Help Goose Lucas in the hotel parking lot find the dangerously misconfigured Network Security Group rule that&rsquo;s allowing unrestricted internet access to sensitive ports like RDP or SSH.</p>
@@ -174,14 +174,14 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 <blockquote>
 </blockquote>
 <h2 id="the-open-door-terminal">The Open Door Terminal</h2>
-<p><a href="#R-image-cdc4b494716dc179c32f3c8029158400" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cdc4b494716dc179c32f3c8029158400"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-1.png"></a></p>
+<p><a href="#R-image-5032ad27d20f2b9507822f05b8bdfb55" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5032ad27d20f2b9507822f05b8bdfb55"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-1.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az group list</span></span></code></pre></div>
-<p><a href="#R-image-7d072978fe9ba22d97a8a66012f16e90" class="lightbox-link"><img alt="Group list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7d072978fe9ba22d97a8a66012f16e90"><img alt="Group list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-2.png"></a></p>
+<p><a href="#R-image-7019a1bdc715ae37e772c9f9393e470b" class="lightbox-link"><img alt="Group list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7019a1bdc715ae37e772c9f9393e470b"><img alt="Group list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-2.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az group list -o table</span></span></code></pre></div>
-<p><a href="#R-image-191f44bbcd7d802fab89fea2247f0409" class="lightbox-link"><img alt="Group list table" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-191f44bbcd7d802fab89fea2247f0409"><img alt="Group list table" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-3.png"></a></p>
+<p><a href="#R-image-b98cf3c4f2e6e4a0fec8509a1ec8e809" class="lightbox-link"><img alt="Group list table" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b98cf3c4f2e6e4a0fec8509a1ec8e809"><img alt="Group list table" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-3.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg list -o table</span></span></code></pre></div>
 <table>
   <thead>
@@ -219,14 +219,14 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
       </tr>
   </tbody>
 </table>
-<p><a href="#R-image-5859d444f1211b8f5ece276ad82aa6fc" class="lightbox-link"><img alt="NSG list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5859d444f1211b8f5ece276ad82aa6fc"><img alt="NSG list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-4.png"></a></p>
+<p><a href="#R-image-df83216032b3d5aa50c334f295e4256c" class="lightbox-link"><img alt="NSG list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-df83216032b3d5aa50c334f295e4256c"><img alt="NSG list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-4.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg show -o table --name nsg-web-eastus --resource-group theneighborhood-rg1</span></span></code></pre></div>
-<p><a href="#R-image-066c4e9a087b9e2e78c282dab917dbaa" class="lightbox-link"><img alt="NSG show " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-066c4e9a087b9e2e78c282dab917dbaa"><img alt="NSG show " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-5.png"></a></p>
+<p><a href="#R-image-7f0f0f3df7303a878cfb43b6088c2db1" class="lightbox-link"><img alt="NSG show " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7f0f0f3df7303a878cfb43b6088c2db1"><img alt="NSG show " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-5.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule list --name nsg-mgmt-eastus --resource-group theneighborhood-rg2 | less</span></span></code></pre></div>
-<p><a href="#R-image-a17494b6102ab44dcbb0d8f1361f6682" class="lightbox-link"><img alt="Rules list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a17494b6102ab44dcbb0d8f1361f6682"><img alt="Rules list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-6.png"></a></p>
+<p><a href="#R-image-e3072631ea1cd19ed50cb95a61be55fa" class="lightbox-link"><img alt="Rules list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e3072631ea1cd19ed50cb95a61be55fa"><img alt="Rules list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-6.png"></a></p>
 <h3 id="viewing-suspect-rules">Viewing suspect rules</h3>
 <h4 id="rules-theneighborhood-rg2-_-nsg-mgmt-eastus">Rules theneighborhood-rg2 _ nsg-mgmt-eastus</h4>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule list  --name nsg-mgmt-eastus --resource-group theneighborhood-rg2 | less</span></span></code></pre></div>
@@ -294,8 +294,8 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule show --nsg-name nsg-production-eastus --resource-group theneighborhood-rg1 -n &lt;rulename&gt;</span></span></code></pre></div>
 <p>As I were traversing and inspecting these rules, I caught one of interest. A RDP related one:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule show --nsg-name nsg-production-eastus --resource-group theneighborhood-rg1 -n Allow-RDP-From-Internet</span></span></code></pre></div>
-<p><a href="#R-image-b6dbe83a6bd5a637327ce10817541337" class="lightbox-link"><img alt="Interesting rule" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-7.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b6dbe83a6bd5a637327ce10817541337"><img alt="Interesting rule" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-7.png"></a></p>
+<p><a href="#R-image-d1d0a91ae756ef4e04297251884b8661" class="lightbox-link"><img alt="Interesting rule" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-7.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d1d0a91ae756ef4e04297251884b8661"><img alt="Interesting rule" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-7.png"></a></p>
 <h2 id="goose-lucas-mission-debrief">Goose Lucas mission debrief</h2>
 <blockquote>
 <p>Ha! &lsquo;Properly protected&rsquo; they said. More like &lsquo;properly exposed to the entire internet&rsquo;! Good catch, amigo.</p>
@@ -361,7 +361,7 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
             <li class="active " data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -379,8 +379,8 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764489759" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764489759" defer></script>
-    <script src="/js/theme.js?1764489759" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1765029771" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1765029771" defer></script>
+    <script src="/js/theme.js?1765029771" defer></script>
   </body>
 </html>
