--- a/public/act1/visual-firewall-thinger/index.html
+++ b/public/act1/visual-firewall-thinger/index.html
@@ -39,26 +39,26 @@ And yes, finger guns are 100% appropriate for military portraits.">
     <meta itemprop="wordCount" content="274">
     <title>Visual Firewall Thinger :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/visual-firewall-thinger/index.xml" rel="alternate" type="application/rss+xml" title="Visual Firewall Thinger :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764489759" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764489759" defer></script>
-    <script src="/js/search-lunr.js?1764489759" defer></script>
-    <script src="/js/search.js?1764489759" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1765029771" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1765029771" defer></script>
+    <script src="/js/search-lunr.js?1765029771" defer></script>
+    <script src="/js/search.js?1765029771" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764489759";
+      window.relearn.index_js_url="/searchindex.en.js?1765029771";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764489759" defer></script>
+    <script src="/js/lunr/lunr.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1765029771" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764489759" rel="stylesheet">
-    <link href="/css/theme.css?1764489759" rel="stylesheet">
-    <link href="/css/format-html.css?1764489759" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765029771" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765029771" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1765029771" rel="stylesheet">
+    <link href="/css/theme.css?1765029771" rel="stylesheet">
+    <link href="/css/format-html.css?1765029771" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -169,8 +169,8 @@ And yes, finger guns are 100% appropriate for military portraits.">
 
 <h1 id="visual-firewall-thinger">Visual Firewall Thinger</h1>
 
-<p><a href="#R-image-bc7b291948d018271363a0dd2ce60687" class="lightbox-link"><img alt="Chris Elgee" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-bc7b291948d018271363a0dd2ce60687"><img alt="Chris Elgee" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif"></a></p>
+<p><a href="#R-image-1393e9af7372a28f723924990ead7e5e" class="lightbox-link"><img alt="Chris Elgee" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1393e9af7372a28f723924990ead7e5e"><img alt="Chris Elgee" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/chriselgee-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Find Elgee in the big hotel for a firewall frolic and some techy fun.</p>
@@ -188,23 +188,23 @@ And yes, finger guns are 100% appropriate for military portraits.">
 </blockquote>
 <h2 id="holiday-firewall-simulator">Holiday Firewall Simulator</h2>
 <p>Upon entering the simulator we are presented with a fairly nice GUI. By spending a couple of minutes it is all quite forward what to do. It tells us exactly what to do under the &ldquo;Firewall Configuration Goals&rdquo; section. Let&rsquo;s get cracking!</p>
-<p><a href="#R-image-9caa16f5d6569f685beaee4cabf0b578" class="lightbox-link"><img alt="The simulator in all its glory" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9caa16f5d6569f685beaee4cabf0b578"><img alt="The simulator in all its glory" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-1.png"></a></p>
+<p><a href="#R-image-80527541f261aca8d8175c3cd3da0eab" class="lightbox-link"><img alt="The simulator in all its glory" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-80527541f261aca8d8175c3cd3da0eab"><img alt="The simulator in all its glory" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-1.png"></a></p>
 <p>Clicking on the &ldquo;Internet&rdquo; node in the network drawing we have to enable <code>http</code> and <code>https</code> and click &ldquo;Save Rules&rdquo;.</p>
-<p><a href="#R-image-c8881b808f05a504b63b388d4a5a0b2a" class="lightbox-link"><img alt="Configuring the Internet" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c8881b808f05a504b63b388d4a5a0b2a"><img alt="Configuring the Internet" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-2.png"></a></p>
+<p><a href="#R-image-c257e4fcf46a996531861a3b8d6c1f9b" class="lightbox-link"><img alt="Configuring the Internet" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c257e4fcf46a996531861a3b8d6c1f9b"><img alt="Configuring the Internet" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-2.png"></a></p>
 <p>Next, we just tag along enabling <code>HTTPS</code>, <code>HTTP</code> and <code>SSH</code> for the DMZ:</p>
-<p><a href="#R-image-48d315106ecd598a57a1f292feaee6b5" class="lightbox-link"><img alt="Configuring the DMZ" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-48d315106ecd598a57a1f292feaee6b5"><img alt="Configuring the DMZ" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-3.png"></a></p>
+<p><a href="#R-image-a6dfb2e10fb7828376c24ff5362e94e1" class="lightbox-link"><img alt="Configuring the DMZ" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a6dfb2e10fb7828376c24ff5362e94e1"><img alt="Configuring the DMZ" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-3.png"></a></p>
 <p>For the internal network to cloud we enable <code>http</code>, <code>https</code>, <code>smtp</code> and <code>ssh</code>:</p>
-<p><a href="#R-image-3d4bc06458b433e24d22a6225b5a3dc4" class="lightbox-link"><img alt="Configuring the internal network to cloud" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3d4bc06458b433e24d22a6225b5a3dc4"><img alt="Configuring the internal network to cloud" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-4.png"></a></p>
+<p><a href="#R-image-8cbe9dbbe76bcff46895553fe5fa4c6e" class="lightbox-link"><img alt="Configuring the internal network to cloud" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8cbe9dbbe76bcff46895553fe5fa4c6e"><img alt="Configuring the internal network to cloud" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-4.png"></a></p>
 <p>We aren&rsquo;t quite finished with the internal network yet. We have to configure the connections to the workstations as well. These shall have full access.</p>
-<p><a href="#R-image-8dae18d16df9aa4103b3aed0bd7154fa" class="lightbox-link"><img alt="Configuring workstations" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8dae18d16df9aa4103b3aed0bd7154fa"><img alt="Configuring workstations" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-5.png"></a></p>
+<p><a href="#R-image-38016a2c028187a41856bd2e574804a2" class="lightbox-link"><img alt="Configuring workstations" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-38016a2c028187a41856bd2e574804a2"><img alt="Configuring workstations" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-5.png"></a></p>
 <p>And Done!</p>
-<p><a href="#R-image-fd14b5bdab1ec31b88df2b430ec9fbca" class="lightbox-link"><img alt="Done" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fd14b5bdab1ec31b88df2b430ec9fbca"><img alt="Done" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-6.png"></a></p>
+<p><a href="#R-image-b4581424e37c2841c2e840a39cb5b5da" class="lightbox-link"><img alt="Done" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firewall-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b4581424e37c2841c2e840a39cb5b5da"><img alt="Done" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firewall-6.png"></a></p>
 <h2 id="chris-elgee-mission-debrief">Chris Elgee mission debrief</h2>
 <blockquote>
 <p>finger guns Nice work! You&rsquo;ve mastered those firewall fundamentals like a true network security pro.</p>
@@ -271,7 +271,7 @@ And yes, finger guns are 100% appropriate for military portraits.">
             <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -289,8 +289,8 @@ And yes, finger guns are 100% appropriate for military portraits.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764489759" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764489759" defer></script>
-    <script src="/js/theme.js?1764489759" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1765029771" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1765029771" defer></script>
+    <script src="/js/theme.js?1765029771" defer></script>
   </body>
 </html>
