--- a/public/act1/holiday-hack-orientation/index.html
+++ b/public/act1/holiday-hack-orientation/index.html
@@ -31,26 +31,26 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
     <meta itemprop="wordCount" content="240">
     <title>Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/holiday-hack-orientation/index.xml" rel="alternate" type="application/rss+xml" title="Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1764489759" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764489759" defer></script>
-    <script src="/js/search-lunr.js?1764489759" defer></script>
-    <script src="/js/search.js?1764489759" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1765029771" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1765029771" defer></script>
+    <script src="/js/search-lunr.js?1765029771" defer></script>
+    <script src="/js/search.js?1765029771" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764489759";
+      window.relearn.index_js_url="/searchindex.en.js?1765029771";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764489759" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764489759" defer></script>
+    <script src="/js/lunr/lunr.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1765029771" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1765029771" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764489759" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764489759" rel="stylesheet">
-    <link href="/css/theme.css?1764489759" rel="stylesheet">
-    <link href="/css/format-html.css?1764489759" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765029771" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765029771" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1765029771" rel="stylesheet">
+    <link href="/css/theme.css?1765029771" rel="stylesheet">
+    <link href="/css/format-html.css?1765029771" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -161,8 +161,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 
 <h1 id="holiday-hack-orientation">Holiday Hack Orientation</h1>
 
-<p><a href="#R-image-e59c3bde83fd85f0259ac222425e4e88" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e59c3bde83fd85f0259ac222425e4e88"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif"></a></p>
+<p><a href="#R-image-38336f66d97dd6fbb51091c40b8b0d3c" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-38336f66d97dd6fbb51091c40b8b0d3c"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Meet Lynn Schifano on the train for a warm welcome and get ready for your journey around the Dosis Neighborhood.</p>
@@ -176,14 +176,14 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <hr>
 <p>Hey, think you can give this terminal a try? Just click on it and follow the instructions.</p>
 </blockquote>
-<p><a href="#R-image-d8ff896e64304db1aa37b31b161c594a" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d8ff896e64304db1aa37b31b161c594a"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
+<p><a href="#R-image-9363a5cba5c6490bea3184a4f269c1a7" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9363a5cba5c6490bea3184a4f269c1a7"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
 <p>On one of my attempt to grab a screenshot, no character showed up:</p>
-<p><a href="#R-image-c72394a718d12ab18b4dc0af9c122e24" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c72394a718d12ab18b4dc0af9c122e24"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
+<p><a href="#R-image-7c80355a41922447295abeb9921c74d0" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7c80355a41922447295abeb9921c74d0"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
 <h2 id="terminal-1">Terminal 1</h2>
-<p><a href="#R-image-fba6b486e06700b0217667256dcd6c4b" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fba6b486e06700b0217667256dcd6c4b"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
+<p><a href="#R-image-e01881752211d39100b5d4163baf2955" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e01881752211d39100b5d4163baf2955"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
 <h2 id="lynn-schifano-mission-debrief">Lynn Schifano mission debrief</h2>
 <blockquote>
 <p>Great work! Please, hop off the train and explore the neighborhood.</p>
@@ -252,7 +252,7 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
             <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
@@ -270,8 +270,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764489759" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764489759" defer></script>
-    <script src="/js/theme.js?1764489759" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1765029771" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1765029771" defer></script>
+    <script src="/js/theme.js?1765029771" defer></script>
   </body>
 </html>
